# todo-rust-icp

./: README.md  canister_ids.json  package-lock.json
src/my_project_backend/: Cargo.toml  my_project_backend.did
src/my_project_backend/src/: lib.rs  types.rs
src/my_project_frontend/: package.json
src/my_project_frontend/src/: App.jsx  ListTodos.jsx
