[package]
name = "my_project_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6.0"
serde = {version = "1.0.197", features=["derive"]}
serde_json = "1.0.114"
getrandom = { version = "0.2.3", features = ["custom"]}
rand = "0.7.3"
wasm-bindgen = "0.2.91"
